--- a/style.css
+++ b/style.css
@@ -11,8 +11,16 @@ body{
     background-image: url("img/hero2.png");
     background-repeat: no-repeat;
     background-position:1140px -350px;
+    background-size: auto;
     z-index: 9;
 }
+
+/* @media only screen and (max-device-width: 1000px) {
+    body {
+        background-image: url("img/hero2.png");
+        background-position:left atuo top auto;
+    }
+  } */
 
 .navbar{
     /* background-color: #161848; */
@@ -91,3 +99,25 @@ body{
 .features-div{
     margin-top: 400px;
 }
+
+#about-button{
+    border-radius: 20px;
+}
+
+.shape-image01{
+    background-image: url(img/shape-03.svg);
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 15.5%;
+    width: 100px;
+    height: 100px;
+    transform: rotate(-90deg);
+}
+
+/* .shape-image01{
+    position: absolute;
+    transform: rotate(-90deg);
+    top: 1100px;
+    left: 270px;
+    position: fixed;
+} */
