--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body{
     background-color: #161848;
-    padding-top:76px;
+    /* padding-top:76px; */
     position: relative;
     background-image: url("img/hero2.png");
     background-repeat: no-repeat;
@@ -121,3 +121,76 @@ body{
     left: 270px;
     position: fixed;
 } */
+
+.shape-image10{
+    position: absolute;
+    top: 20%;
+    left: 15%;
+}
+
+.team-section{
+    position: relative;
+    background-image: url("img/shape-08.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: rgba(128, 128, 128, 0.075);
+}
+
+.rotate {
+    animation: rotation 10s;
+  }
+  
+  .linear {
+    animation-timing-function: linear;
+  }
+  
+  .infinite {
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+  .image-container {
+    position: relative;
+    padding-bottom: 1px;
+  }
+  
+  .image {
+    /* display: block; */
+    width: 80%;
+    height: auto;
+  }
+  
+  .overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #4e6bff;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+    clip-path: polygon(55% 29%, 100% 39%, 100% 100%, 0 100%, 0 16%);
+  }
+  
+  .image-container:hover .overlay {
+    height: 25%;
+  }
+
+  .icons {
+    /* color: white; */
+    font-size: 20px;
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
