--- a/style.css
+++ b/style.css
@@ -194,3 +194,17 @@ body{
     transform: translate(-50%, -50%);
     text-align: center;
   }
+
+  .card{
+    background-color: transparent;
+    border: none;
+  }
+
+  .card:hover{
+    background-color: rgba(0, 0, 0, 0.281);
+  }
+
+  .img-icon{
+    width: 20%;
+    height: 20%;
+  }
