--- a/style.css
+++ b/style.css
@@ -227,3 +227,25 @@ body{
     background-color: #161848;
     border-radius: 20px;
   }
+
+  .button-section{
+    background-color: rgba(128, 128, 128, 0.342);
+    border-radius: 30px;
+    padding: 5px;
+    width: 75%;
+    margin: 0 auto;
+  }
+
+  .offer-buttons{
+    width: 20%;
+    /* padding: 5px; */
+    border-radius: 20px;
+    text-align: start;
+    padding-left: 5px;
+  }
+
+  .grid-container {
+    display: inline-grid;
+    grid-template-columns: auto auto auto;
+    gap: 30px;
+  }
