--- a/style.css
+++ b/style.css
@@ -238,7 +238,6 @@ body{
 
   .offer-buttons{
     width: 20%;
-    /* padding: 5px; */
     border-radius: 20px;
     text-align: start;
     padding-left: 5px;
@@ -248,4 +247,29 @@ body{
     display: inline-grid;
     grid-template-columns: auto auto auto;
     gap: 30px;
+  }
+
+  #carouselExample{
+    background-color: rgba(128, 128, 128, 0.103);
+    overflow-y: scroll;
+  }
+
+  #carouselExample::-webkit-scrollbar{
+    width: 5px;
+  }
+
+  #carouselExample::-webkit-scrollbar-track{
+    background: #4e6bff;
+  }
+
+  #carouselExample::-webkit-scrollbar-thumb{
+    background: #f36a8d;
+    height: 50px;
+    width: 5px;
+  }
+
+  .test-image{
+    display: block;
+    margin-left: auto; 
+    margin-right: 0;
   }
