--- a/style.css
+++ b/style.css
@@ -273,3 +273,31 @@ body{
     margin-left: auto; 
     margin-right: 0;
   }
+
+  .info{
+    position: relative;
+    background-color: rgba(128, 128, 128, 0.103);
+    background-image: url("img/shape-16.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 150px 0;
+  }
+
+  .img-01{
+    position: absolute;
+    bottom: 20%;
+    left: 25%;
+  }
+
+  .img-02{
+    position: absolute;
+    top: 10%;
+    right: 60%;
+  }
+
+  .img-03{
+    position: absolute;
+    width: 6%;
+    top: 30px;
+    transform: rotate(90deg);
+  }
