--- a/style.css
+++ b/style.css
@@ -305,3 +305,15 @@ body{
   hr{
     border-top: 2px solid rgba(128, 128, 128, 0.918);
   }
+
+  .blog-items{
+    background-color: rgba(128, 128, 128, 0.171);
+    border-radius: 10px;
+    padding: 0;
+    width: 410px;
+  }
+
+  #blog{
+    margin-left: 0;
+    margin-right: 0;
+  }
