--- a/style.css
+++ b/style.css
@@ -317,3 +317,36 @@ body{
     margin-left: 0;
     margin-right: 0;
   }
+
+  .form-div{
+    background-color: rgba(128, 128, 128, 0.075);
+    background-image: url("img/shape-12.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-bottom: 100px;
+  }
+
+  #info-section{
+    background-color: #161848;
+    padding: 40px;
+    border-radius: 20px;
+  }
+
+  #info-row{
+    padding-bottom: 200px;
+  }
+
+  .form-control{
+    background-color: transparent;
+    border: 2px solid rgba(128, 128, 128, 0.342);
+  }
+
+  input::placeholder{
+    color: rgba(128, 128, 128, 0.459) !important;
+  }
+
+  #form-section{
+    background-color: #161848;
+    padding: 40px;
+    border-radius: 20px;
+  }
