--- a/style.css
+++ b/style.css
@@ -177,11 +177,29 @@ body{
     overflow: hidden;
     width: 100%;
     height: 0;
+    z-index: 1;
     transition: .5s ease;
     clip-path: polygon(55% 29%, 100% 39%, 100% 100%, 0 100%, 0 16%);
   }
   
   .image-container:hover .overlay {
+    height: 25%;
+  }
+
+  .overlay-2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+    overflow: hidden;
+    background-color: #ce11a5;
+    clip-path: polygon(0 44%, 100% 0%, 100% 100%, 0% 100%);
+  }
+  
+  .image-container:hover .overlay-2 {
     height: 25%;
   }
 
